tests/ui/empty-items-are-not-supported.stderr
error: structs without fields are not supported
 --> tests/ui/empty-items-are-not-supported.rs:3:1
  |
3 | #[bitsize(1)]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: structs without fields are not supported
 --> tests/ui/empty-items-are-not-supported.rs:5:1
  |
5 | #[bitsize(1)]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: structs without fields are not supported
 --> tests/ui/empty-items-are-not-supported.rs:7:1
  |
7 | #[bitsize(1)]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: empty enums are not supported
  --> tests/ui/empty-items-are-not-supported.rs:10:1
   |
10 | #[bitsize(1)]
   | ^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)
