tests/ui/empty-items-are-not-supported.rs
use bilge::prelude::*;

#[bitsize(1)]
struct A;
#[bitsize(1)]
struct A();
#[bitsize(1)]
struct A{}

#[bitsize(1)]
enum B {}

fn main() {}
